--- a/style/style.css
+++ b/style/style.css
@@ -7,27 +7,26 @@ header {
     margin: 0;
     padding: 0;
     height: 100vh;
-    width: 100vw;
     position: relative;
-
-
-
-
+    overflow: hidden;
+    
+    
+    
+    
 }
 
 .bg-header {
+    height: 100vh;
+    background-size: cover;
     float: right;
-    z-index: 0;
     padding: 0;
-    margin: 0;
-    z-index: -1;
+    z-index: -100;
 }
 
-#bg {
-  position: relative;
-  z-index: 0;
-  display: block;
+.bg-header img {
+
 }
+
 #logo {
     width: 200px;
     height: 60px;;
@@ -56,7 +55,7 @@ nav {
     font-weight: bold;
     text-decoration: none;
     padding: 0px 18px;
-
+    
 }
 
 
@@ -78,21 +77,21 @@ nav {
     cursor: pointer;
     color: #009EFF;
     transition: 0.4s ease-out;
-
-
+    
+    
 }
 
 .btn-nav button:first-child:hover {
     box-shadow: 0px 0px 8px rgba(0,0,0,0.2);
     transition: 0.4s ease-in;
-
+    
 }
 
 
 .btn-nav button:last-child:hover {
     box-shadow: 0px 0px 8px rgba(0,0,0,0.2);
     transition: 0.4s ease-in;
-
+    
 }
 
 
@@ -102,16 +101,16 @@ nav {
 
 .call-text {
     width: 750px;
-  margin-top: 350px;
+    margin-top: 350px;
     margin-left: 150px;
     overflow: hidden;
-   position: absolute;
+    position: absolute;
     
-
-
+    
+    
 }
 .call-text > h1 {
-
+    
     font-family: 'roboto';
     font-weight: bold;
     font-size: 75px;
@@ -123,7 +122,7 @@ nav {
 }
 
 .call-text p{
-
+    
     font-family: 'roboto';
     font-weight: 300;
     font-size: 20px;
@@ -132,7 +131,7 @@ nav {
 }
 
 .call-text button {
-
+    
     width: 200px;
     height: 50px;
     background-color: white;
@@ -150,44 +149,47 @@ nav {
 }
 
 .main-container {
-
+    
     margin-top: 100px;
     padding: 0;
     z-index: 1;
     border: 1px solid black;
-
+    height: 150vh;
+    position: relative;
+    
 }
 
 .main-info {
-  margin-top: 200px;
-    width: 100vw;
-    height: 40vw;
+    margin: 0;
+    padding: 0;
+    margin-top: 80px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     z-index: 2;
-    position: relative;
-
+    border: 1px solid black;
+    
 }
 
 #svg-bg {
-
-
-margin-top: 100px;
-z-index: -100;
-position: absolute;;
-
+    
+    
+    z-index: -2;
+    margin: 0;
+    padding: 0;    
+    position: absolute;
 }
 
 
 
 .box-img img {
+    margin: 0;
+    padding: 0;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
 }
 
 .box-text {
-    height: 80%;
     width: 45vw;
     
 }
@@ -205,7 +207,7 @@ position: absolute;;
 }
 
 .box-text p {
-
+    
     font-family: 'roboto';
     font-weight: 400;
     font-size: 22px;
@@ -214,7 +216,7 @@ position: absolute;;
     color: white;
     margin-top: 15px;
     padding: 0;
-
+    
 }
 
 .box-text button {
@@ -234,9 +236,81 @@ position: absolute;;
     cursor: pointer;
     color: #009EFF;
     transition: 0.4s ease-out;
-
+    
 }
 
 .box-text button:focus {
     outline: none;
+}
+
+
+.section-two {
+
+    border: 1px solid black;
+    margin: 0;
+    padding: 0;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
+}
+
+.box-text-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    position: relative;
+    margin-top: 100px;
+}
+
+.box-text-2 h2 {
+
+    font-family: 'roboto';
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 40px;
+    line-height: 1.5;
+    text-align: center;
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
+.box-text-2 p {
+    font-family: 'roboto';
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1;
+    text-align: center;
+    color: white;
+    width: 60vw;
+    margin-top: 10px;
+    padding: 0;
+}
+
+.card-info {
+    margin-top: 50px;
+    width: 80vw;
+    border: 1px solid;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+
+}
+.cards-style {
+
+    width: 380px;
+    height: 500px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 2px 2px 8px rgba(0,0,0,0.4);
+    border-radius: 8px;
 }
