--- a/style/style.css
+++ b/style/style.css
@@ -363,3 +363,75 @@ width: 340px;
     text-align: center;
     font-size: 18px;
 }
+
+.depoiments {
+    height: 60vh;
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+
+}
+.depoiments h2 {
+    margin: 0;
+    font-family: 'roboto';
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 40px;
+    line-height: 1.5;
+    text-align: center;
+    color: #222;
+    margin: 0;
+    padding: 0;
+}
+
+
+.container-depoiments {
+    display: flex;
+    justify-content: space-around;
+    flex-flow: column row;
+    align-items: center;
+    border: 1px solid black;
+
+}
+
+
+#profile {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    background-color: black;
+}
+.box-depoiments {
+
+    border: 1px solid black;
+    height: 350px;
+    width: 550px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 8px;
+}
+
+.box-depoiments h3 {
+    font-family: 'roboto';
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 30px;
+    line-height: 1.5;
+    text-align: center;
+    color: #222;
+    margin: 0;
+    padding: 0;
+
+}
+
+.box-depoiments p {
+    color: #665;
+    font-family: 'roboto';
+    font-weight: 400;
+    text-align: center;
+    font-size: 17px;
+    width: 500px;
+}
