--- a/style/style.css
+++ b/style/style.css
@@ -159,7 +159,7 @@ nav {
 
 .main-container {
     
-    margin-top: 100px;
+    margin-top: 50px;
     padding: 0;
     z-index: 1;
     border: 1px solid black;
@@ -366,7 +366,6 @@ width: 340px;
 
 .depoiments {
     height: 60vh;
-    border: 1px solid black;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -388,50 +387,67 @@ width: 340px;
 
 .container-depoiments {
     display: flex;
-    justify-content: space-around;
-    flex-flow: column row;
+   flex-grow: 1;
+   flex-flow: row wrap;
+   justify-content: space-evenly;
     align-items: center;
-    border: 1px solid black;
 
 }
 
-
-#profile {
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
-    background-color: black;
-}
 .box-depoiments {
 
-    border: 1px solid black;
-    height: 350px;
-    width: 550px;
+    width: 600px;
+    height: 300px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    flex-direction: column;
-    border-radius: 8px;
+    flex-direction: row;
+
+ }
+ 
+ #profile {
+     z-index: 1;
+    width: 130px;
+    height: 130px;
+background-image: url(../img/profile_user.jpg);
+background-size: cover; 
+position: absolute;
+
 }
 
-.box-depoiments h3 {
+ .box-depoiments-container {
+ 
+    z-index: -1;
+    position: relative;
+    width: 550px;
+    background-color: white;
+    padding: 15px;
+    box-shadow: 0px 0px 4px rgba(0,0,0,0.2);
+    border-radius: 6px;
+    margin-left: 110px;
+
+}
+
+
+.box-depoiments-container h4 {
     font-family: 'roboto';
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 22px;
     line-height: 1.5;
-    text-align: center;
-    color: #222;
+    text-align: right;
+    color: #444;
     margin: 0;
-    padding: 0;
+    padding: 5px;
 
 }
 
-.box-depoiments p {
+.box-depoiments-container p {
     color: #665;
     font-family: 'roboto';
     font-weight: 400;
-    text-align: center;
+    text-align: left;
     font-size: 17px;
-    width: 500px;
+    padding-top: 10px;;
+    padding-left: 30px;
 }
