--- a/style/style.css
+++ b/style/style.css
@@ -27,7 +27,7 @@ header {
 .bg-header img {
 background-size: cover;
 max-width: 1676px;
-height: 800px;
+height: 900px;
 
 }
 
@@ -163,9 +163,19 @@ nav {
     padding: 0;
     z-index: 1;
     border: 1px solid black;
-    height: 150vh;
-    position: relative;
     
+}
+
+.svg {
+    
+    
+    z-index: -1;
+    margin: 0;
+    padding: 0;    
+position: absolute;
+width: 100vw;
+height: 573px;
+background-image: url(../img/svg-bg.png);
 }
 
 .main-info {
@@ -176,18 +186,10 @@ nav {
     flex-direction: row;
     justify-content: space-around;
     align-items: initial;
-    z-index: 2;
+    z-index: 1;
     border: 1px solid black;
+    position: relative;
     
-}
-
-#svg-bg {
-    
-    
-    z-index: -2;
-    margin: 0;
-    padding: 0;    
-    position: absolute;
 }
 
 
@@ -195,7 +197,7 @@ nav {
 .box-img img {
     margin: 0;
     padding: 0;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
 }
 
 .box-text {
@@ -279,7 +281,7 @@ nav {
     align-items: center;
     z-index: 2;
     position: relative;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 .box-text-2 h2 {
