--- a/style/style.css
+++ b/style/style.css
@@ -159,10 +159,8 @@ nav {
 
 .main-container {
     
-    margin-top: 20px;
     padding: 0;
     z-index: 1;
-    border: 1px solid black;
     
 }
 
@@ -173,21 +171,22 @@ nav {
     margin: 0;
     padding: 0;    
 position: absolute;
-width: 100vw;
+width: 100%;
 height: 573px;
 background-image: url(../img/svg-bg.png);
 }
 
-.main-info {
-    margin: 0;
-    padding: 0;
-    margin-top: 80px;
+.primeira-section {
+
+
+    margin-bottom: 20px;
+    margin-top: 20px;
+    padding-top: 40px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: initial;
     z-index: 1;
-    border: 1px solid black;
     position: relative;
     
 }
@@ -198,9 +197,19 @@ background-image: url(../img/svg-bg.png);
     margin: 0;
     padding: 0;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: gray;
+  transition: .3s;
+}
+
+.box-img img:hover {
+    -webkit-filter: none;
+  filter: none;
 }
 
 .box-text {
+
     margin: 0;
     width: 45vw;
     
@@ -261,8 +270,8 @@ background-image: url(../img/svg-bg.png);
 
 
 .section-two {
-
-    border: 1px solid black;
+height: 65vh;
+ background-color: #fdfdfd;
     margin: 0;
     padding: 0;
     z-index: 1;
@@ -270,9 +279,16 @@ background-image: url(../img/svg-bg.png);
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: .3s ease;
 
   
 }
+
+.section-two:hover {
+    transition: .3s ease;
+box-shadow: 2px 4px 8px rgba(0,0,0,0.1);
+}
+
 
 .box-text-2 {
     display: flex;
@@ -287,23 +303,22 @@ background-image: url(../img/svg-bg.png);
 .box-text-2 h2 {
 
     font-family: 'roboto';
-    font-weight: bold;
-    text-transform: uppercase;
+    font-weight: 200;
     font-size: 40px;
     line-height: 1.5;
     text-align: center;
-    color: white;
+    color: #444;
     margin: 0;
     padding: 0;
 }
 
 .box-text-2 p {
     font-family: 'roboto';
-    font-weight: 500;
+    font-weight: 200;
     font-size: 18px;
     line-height: 1;
     text-align: center;
-    color: white;
+    color: #333;
     width: 60vw;
     margin-top: 10px;
     padding: 0;
@@ -312,9 +327,9 @@ background-image: url(../img/svg-bg.png);
 .card-info {
     margin-top: 50px;
     width: 80vw;
-    border: 1px solid;
     display: flex;
-    justify-content: space-around;
+    flex-grow: 1;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
 
@@ -322,8 +337,8 @@ background-image: url(../img/svg-bg.png);
 }
 .cards-style {
 
-    width: 380px;
-    height: 450px;
+    width: 300px;
+    height: 350px;
     background-color: white;
     box-shadow: 2px 2px 8px rgba(0,0,0,0.4);
     border-radius: 8px;
@@ -341,20 +356,23 @@ background-image: url(../img/svg-bg.png);
     opacity: 1;
 }
 .cards-style h3 {
+    text-align: center;
     font-family: 'roboto';
-    font-weight: bold;
-    font-size: 22px;
+    font-weight: 300;
+    font-size: 19px;
     color: #333;
-    margin: 20px;
+    margin: 10px;
+    width: 100%;
+    padding: 0;
 }
 
 .cards-style i {
-    margin: 0;
-    font-size: 60px;
+    margin: 5px;
+    font-size: 32px;
 }
 .inside-card {
-width: 340px;
-    height: 400px;
+width: 240px;
+    height: 280px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -363,34 +381,39 @@ width: 340px;
 .inside-card p {
     color: #665;
     font-family: 'roboto';
-    font-weight: 400;
+    font-weight: 200;
     text-align: center;
-    font-size: 18px;
+    font-size: 16px;
+    line-height: 1.2;
 }
 
 .depoiments {
     height: 60vh;
     margin-top: 50px;
     height: 50vh;
-    border: 1px solid black;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
 
 }
 .depoiments h2 {
-    margin: 0;
+   margin: 0;
+    margin-left: 50px;
     font-family: 'roboto';
-    font-weight: bold;
-    text-transform: uppercase;
+    font-weight: 300;
     font-size: 40px;
     line-height: 1.5;
-    text-align: center;
+    text-align: left;
     color: #222;
-    margin: 0;
     padding: 0;
 }
-
+.depoiments h2::after{
+    content: '';
+    height: 4px;
+    width: 100px;
+    background-color: #009EFF;
+    display: block;
+}
 
 .container-depoiments {
     display: flex;
