--- a/style/style.css
+++ b/style/style.css
@@ -271,8 +271,8 @@ background-image: url(../img/svg-bg.png);
 
 .section-two {
 height: 65vh;
- background-color: #fdfdfd;
-    margin: 0;
+background-color: #fdfdfd;
+margin: 0;
     padding: 0;
     z-index: 1;
     display: flex;
@@ -388,13 +388,11 @@ width: 240px;
 }
 
 .depoiments {
-    height: 60vh;
+    position: relative;
+    display: block;
+    height: 65vh;
     margin-top: 50px;
-    height: 50vh;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-
+    margin-bottom: 50px;
 }
 .depoiments h2 {
    margin: 0;
@@ -417,8 +415,8 @@ width: 240px;
 
 .container-depoiments {
     display: flex;
-   flex-grow: 1;
-   flex-flow: row wrap;
+    flex-grow: 1;
+    flex-flow: row wrap;
    justify-content: space-evenly;
     align-items: center;
 
@@ -482,7 +480,57 @@ position: absolute;
     padding-left: 30px;
 }
 
+.empresas-parceiras {
+height: 80vh;
+display: flex;
+justify-content: space-around;
+flex-direction: row;
+align-items: center;
+background-color: #fdfdfd;
 
+
+}
+
+.img-empresas {
+    width: 40%;
+    height: 80%;    
+display: flex;
+justify-content: space-around;
+align-items: center;
+flex-direction: row;
+flex-flow: row wrap;
+
+}
+
+.img-empresas img {
+    height: 44px;
+    width: 180px;
+
+}
+
+
+.texto-empresas {
+    width: 30%;
+    text-align: right;
+}
+
+.texto-empresas h2 {
+    font-family: 'roboto';
+    font-weight: 200;
+    font-size: 40px;
+    line-height: 1.5;
+    color: #444;
+    margin: 0;
+    padding: 0;
+}
+
+.texto-empresas p {
+    color: #665;
+    font-family: 'roboto';
+    font-weight: 200;
+    font-size: 16px;
+    line-height: 1.2;
+}
 @media screen and (max-width: 1600px){
     
     .call-text {
