--- a/style/style.css
+++ b/style/style.css
@@ -3,28 +3,28 @@ body {
     margin: 0;
     display: grid; 
     grid-template-areas: "header header" 
-                         "nav nav" 
-                         "main main"
-                         "section section"
-                         "footer footer";
-                        /* PESSOAS, AQUI ESTÁ A ALTURA DE CADA ELEMENTO EM ORDEM, OU SEJA, 
-                        O GRID-TEMPLATE-ROWS ESTÁ DIZENDO QUE O HEADER TEM 65VH, A NAV 0VH(É MELHOR PQ EU POSSO MODIFICAR)
-                        E ASSIM EM DIANTE... */
-                         grid-template-rows:65vh 0vh 80vh 50vh 20vh;
-
-                         /* GRID GAP CORRESPONDE AO ESPAÇO DE CADA ELEMENTO DA GRID */
-                         grid-gap: 1rem; 
-                         box-sizing: border-box;
-overflow-x: hidden;
-   
+    "nav nav" 
+    "main main"
+    "section section"
+    "footer footer";
+    /* PESSOAS, AQUI ESTÁ A ALTURA DE CADA ELEMENTO EM ORDEM, OU SEJA, 
+    O GRID-TEMPLATE-ROWS ESTÁ DIZENDO QUE O HEADER TEM 65VH, A NAV 0VH(É MELHOR PQ EU POSSO MODIFICAR)
+    E ASSIM EM DIANTE... */
+    grid-template-rows:100vh 0vh 100vh 100vh 20vh;
+    
+    /* GRID GAP CORRESPONDE AO ESPAÇO DE CADA ELEMENTO DA GRID */
+    grid-gap: 1rem; 
+    box-sizing: border-box;
+    overflow-x: hidden;
+    font-family: 'ubuntu';    
 }
 
 
 
 .main-header {
     grid-area: header; margin: 0;
-    padding: 0;  background-color: white;}
-
+    padding: 0;  background-color: white;
+}
 
 .main-nav{
     grid-area: nav; margin: 0;
@@ -32,16 +32,18 @@ overflow-x: hidden;
     
 }
 
-
+.main-nav img:hover{
+    cursor: pointer;
+    transform: scale(1.2);
+}
 
 .main-section {
-    grid-area: section; background-color: rosybrown;
+    grid-area: section; background-color: white;
     
 }
 
-
 .main-content {
-    grid-area: main; background-color: firebrick;
+    grid-area: main; 
     
 }
 
@@ -50,95 +52,120 @@ overflow-x: hidden;
     
 }
 
+
+
 /* RESPONSIVIDADE DA GRID */
-
 @media screen and (max-width: 768px) {
-
-body{
+    
+    body{
         grid-template-areas: "header" "nav" "main" "section"  "footer";
     }
     .main-content {flex-direction: column;}
 }
 
+
+
+
+
+
+/* HEADER */
 header {
     width: 100vw;
-margin: 0;
-padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .header-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
-flex-direction: row;
-    height: 60vh;
+    flex-direction: row;
+    height: 85vh;
 }
 
 .imgHeader img {
-    height: 450px;
-    width: 550px;
+    height: 650px;
+    width: 750px;
 }
 
-.chamadaTexto {
+.imgHeader img:hover{
+    transition: transform 0.5s ease;
+    transform: scale(1.1);
+}
 
-    color: #009EFF;
-    margin: 0;
-    width: 400px;
-    height: 290px;
+nav {
+    margin-top: 20px;
+    height: 80px;
+    z-index: 1;
     display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-items: flex-start;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row; 
+    background-color: white;
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
 }
 
-.chamadaTexto h1 {
+#logo {
+    height: 65px;
+    width: 170px;
+}
+
+.nav-items {
+    margin-left: 230px;
     font-family: 'ubuntu';
-    font-weight: 700;
-    font-size: 3rem;
-    margin: 0;
-
 }
 
-.chamadaTexto p {
-    width: 380px;
-    word-wrap:normal;
+.nav-items a {
+    color: rgb(0, 113, 141);
+    transform: scale(1.2);
     font-family: 'ubuntu';
-    font-weight: 300;
-    font-size: 1.1rem;
-    color: #444;
-
+    font-weight: Bolder than 300;
+    font-size: 1.4rem;
+    text-decoration: none;
+    padding: 0px 18px;
+    
 }
 
-.chamadaTexto button {
-    max-width: 250px;
-    min-width: 200px;
-    max-height: 75px;
-    min-height: 45px;
+.nav-items a:hover{
+    transform: scale(1.2);
+    color: rgb(0, 201, 255);
+}
+
+#btn-nav {
+    max-width: 300px;
+    min-width: 140px;
+    min-height: 30px;
+    max-height: 45px;
+    padding: 12px;
+    margin: 10px;
     border: none;
     border-radius: 100px;
-    border: 1px solid #009EFF;
-    color: #009EFF;
-    font-family: 'roboto';
+    background-color: rgb(0, 201, 255);
+    color: white;
+    font-family: 'ubuntu';
     font-weight: bold;
-    font-size: 16px;
-    text-transform: uppercase;
-    background-color: white;
+    font-size: 1.2rem;
+    text-align: center;
     cursor: pointer;
-
+    transition: 0.4s ease-out;
+    text-shadow: 1px 1px 0px rgba(0,0,0,0.2);
 }
 
-.chamadaTexto button:hover {
-    transition: 0.1s ease;
-    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
-
+#btn-nav:hover {
+    box-shadow: 0px 0px 8px rgba(0,0,0,0.2);
+    transition: 0.4s ease-in;
+    transform: scale(1.1)
 }
 
-.chamadaTexto button:focus {
+#btn-nav:focus {
     outline: none;
 }
 
+
+
+/* BOTAO ENVIAR */
 .icones-header {
-    width: 200px;
+    width: 100%;
     margin-top: 30px;
     display: flex;
     justify-content: space-between;
@@ -150,98 +177,302 @@ flex-direction: row;
     display: flex;
     justify-content:center;
     align-items: center;
-text-align: center;
-font-size: 18px;
-height: 48px;
-width: 48px;
-border-radius: 100px;
-border: 1px solid #009EFF;
-cursor: pointer;
-transition: .2s ease;
-
-
+    text-align: center;
+    font-size: 18px;
+    height: 48px;
+    width: 48px;
+    border-radius: 100px;
+    border: 1px solid rgb(0, 201, 255);
+    cursor: pointer;
+    transition: .2s ease;   
 }
+
 .icones-header i:hover {
     transition: .2s ease;
-background-color: #009EFF;
-color: white;
-}
- nav {
-    margin-top: 20px;
-    height: 80px;
-    z-index: 1;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row; 
-    background-color: white;
-    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
-}
-#logo {
-    height: 45px;
-    width: 160px;
-}
-
-.nav-items {
-    margin-left: 230px;
-}
-
-.nav-items a {
-    color: #009EFF;
-    text-transform: uppercase;
-    font-family: 'roboto';
-    font-size: 16px;
-    font-weight: bold;
-    text-decoration: none;
-    padding: 0px 18px;
-    
-}
-
-
-#btn-nav {
-    max-width: 300px;
-    min-width: 140px;
-    min-height: 30px;
-    max-height: 45px;
-    padding: 12px;
-    margin: 10px;
-    border: none;
-    border-radius: 4px;
-    background-color: #009EFF;
+    background-color:rgb(0, 201, 255);
     color: white;
-    font-family: 'roboto';
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 14px;
-    text-align: center;
+}
+
+
+
+/* ASIDE */
+.chamadaTexto {
+    
+    color: rgb(0, 170, 212); /*Azul médio*/
+    margin: 0;
+    width: 400px;
+    height: 290px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.chamadaTexto h1 {
+    font-family: 'ubuntu';
+    font-weight: 650;
+    font-size: 4.5rem;
+    margin: 0;
+    
+}
+
+.chamadaTexto p {
+    margin-top: 20px;
+    width: 580px;
+    word-wrap:normal;
+    font-family: 'ubuntu';
+    font-weight: 300;
+    font-size: 1.7rem;
+    color: rgb(208, 206, 206);
+    
+}
+
+.buttom-icones button {
+    max-width: 250px;
+    min-width: 100%;
+    max-height: 75px;
+    min-height: 45px;
+    border: none;
+    border-radius: 100px;
+    border: 1px solid rgb(0, 201, 255);
+    color: rgb(208, 206, 206);
+    font-family: 'ubuntu';
+    font-size: 1.4rem;
+    background-color: white;
     cursor: pointer;
-    transition: 0.4s ease-out;
-    text-shadow: 1px 1px 0px rgba(0,0,0,0.2);
-    
-}
-
-#btn-nav:hover {
-    box-shadow: 0px 0px 8px rgba(0,0,0,0.2);
-    transition: 0.4s ease-in;
-    
+    padding: 25px 0;
+    font-weight: bolder than 300;
 }
 
 
-#btn-nav:focus {
+.buttom-icones button:hover {
+    transition: 0.1s ease;
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+    transform: scale(1.1);
+    color: rgb(0, 201, 255);
+    
+}
+
+.buttom-icones button:focus {
     outline: none;
 }
 
+.buttom-icones{
+    width: 80%;
+} 
+
+
+
+
+/* 2 BOXES BRANCOS COM BOTAO */
 .main-content {
     width: 100vw;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-flow: row column;
+    justify-content: center;
+    align-items: space-around;
+    flex-direction: column;
 }
 
-.main-content div {
-    height: 500px;
-    width: 400px;
-    background-color: #009EFF;
-margin: 50px;
+#box-pq-jovem{
+    position: relative;
+    display: flex;
+    margin: 0;
+    width: 100%;
+    height: 50%;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background: url('../img/azul-circ.png');
+    background-repeat: cover;
+    overflow: hidden;
+}
+
+.box-incentivo{
+    bottom: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 70%;
+    width: 27%;
+    background-color: white;
+    box-shadow: 1px 3px 5px rgba(0,0,0,0.4);
+    border-radius: 10px; 
+}
+
+.box1{
+    position: absolute;
+    left: 18%;
+}
+
+.box2{
+    position: absolute;
+    right: 18%;
+}
+
+.box-incentivo p{
+    width: 50%;
+    text-align: center;
+    word-wrap:normal;
+    font-family: 'ubuntu';
+    font-weight: 300;
+    font-size: 2rem;
+    color: rgb(208, 206, 206);
+    margin-bottom: 40px;
+}
+
+.box-incentivo span{
+    word-wrap:normal;
+    font-family: 'ubuntu';
+    font-weight: bolder;
+    font-size: 2rem;
+    color: rgb(0, 170, 212);
+    margin-bottom: 40px;
+}
+
+.buttom-incentivo {
+    max-width: 250px;
+    min-width: 70%;
+    max-height: 75px;
+    min-height: 45px;
+    border: none;
+    border-radius: 100px;
+    border: 1px solid rgb(0, 201, 255);
+    color: rgb(208, 206, 206);
+    font-family: 'ubuntu';
+    font-size: 1.4rem;
+    background-color: white;
+    cursor: pointer;
+    padding: 25px 0;
+    font-weight: bolder than 300;
+    
+}
+
+.buttom-incentivo:hover {
+    transition: 0.1s ease;
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+    transform: scale(1.1);
+    color: rgb(0, 201, 255);
+    
+}
+
+.buttom-incentivo:focus {
+    outline: none;
+}
+
+.box-pq-jovem{
+    background: url('../img/fundo.png');
+    background-repeat: cover;
+    display: flex;
+    height: 50%;
+    justify-content: space-evenly;
+    align-items: center;
+    
+}
+
+.box-pq-jovem h2{
+    font-family: 'ubuntu';
+    font-weight: 700;
+    font-size: 4.5rem;
+    margin: 0;
+    color: white;
+}
+
+
+.text-pq p{
+    margin-top: 20px;
+    width: 680px;
+    word-wrap:normal;
+    font-family: 'ubuntu';
+    font-weight: 300;
+    font-size: 1.7rem;
+    color:white;
+    text-align: justify;
+}
+
+.imgTextPq{
+    height: 50%;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+}
+
+.imgTextPq img{
+    height: 90%;
+}
+
+
+
+
+/* SECTION: COMO FUNCIONA? */
+.main-section{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: space-evenly;
+}
+
+.como-func{
+    width: 70%;
+    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: space-evenly;
+}
+
+.como-func h2{
+    font-family: 'ubuntu';
+    font-weight: 650;
+    font-size: 3rem;
+    margin: 0;
+    color: rgb(0, 170, 212);
+    text-align: center;
+} 
+
+.como-func p{
+    word-wrap:normal;
+    font-family: 'ubuntu';
+    font-weight: 300;
+    font-size: 1.7rem;
+    color:rgb(208, 206, 206);
+    text-align: center;
+}
+
+
+.func-icones{
+    margin: 40px auto;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center; 
+}
+
+.func-div{
+    width: 28%;
+    text-align: center;
+}
+
+.func-div p{
+    word-wrap:normal;
+    font-family: 'ubuntu';
+    font-weight: 300;
+    font-size: 1.1rem;
+    color:rgb(175, 171, 171);
+    text-align: center;
+}
+
+.func-div h3{
+    word-wrap:normal;
+    font-family: 'ubuntu';
+    font-weight: bolder;
+    font-size: 1.7rem;
+    color: rgb(0, 170, 212);
+    border-radius: 50%;
+}
+
+.func-div img{
+    width: 25%;
 }
