--- a/style/style.css
+++ b/style/style.css
@@ -35,6 +35,7 @@ body {
 .main-nav img:hover{
     cursor: pointer;
     transform: scale(1.2);
+    
 }
 
 .main-section {
@@ -84,13 +85,9 @@ header {
 }
 
 .imgHeader img {
-    height: 650px;
-    width: 750px;
-}
-
-.imgHeader img:hover{
-    transition: transform 0.5s ease;
-    transform: scale(1.1);
+    margin-left: 50px;
+    height: 78vh;
+    width: 47vw;
 }
 
 nav {
@@ -116,13 +113,14 @@ nav {
 }
 
 .nav-items a {
-    color: rgb(0, 113, 141);
+    color: black;
     transform: scale(1.2);
     font-family: 'ubuntu';
     font-weight: Bolder than 300;
     font-size: 1.4rem;
     text-decoration: none;
     padding: 0px 18px;
+    box-sizing: border-box;
     
 }
 
@@ -140,21 +138,25 @@ nav {
     margin: 10px;
     border: none;
     border-radius: 100px;
-    background-color: rgb(0, 201, 255);
-    color: white;
+    background-color: transparent;
+    color: black;
     font-family: 'ubuntu';
-    font-weight: bold;
+    font-weight: 500;
     font-size: 1.2rem;
     text-align: center;
     cursor: pointer;
-    transition: 0.4s ease-out;
-    text-shadow: 1px 1px 0px rgba(0,0,0,0.2);
+    transition: 0.5s;
+    box-sizing: border-box;
+    
+    
 }
 
 #btn-nav:hover {
-    box-shadow: 0px 0px 8px rgba(0,0,0,0.2);
-    transition: 0.4s ease-in;
-    transform: scale(1.1)
+    box-sizing: border-box;
+    transform: scale(1.05);
+    transition: 0.5s;
+    box-shadow: 0 0 25px rgba(0, 201, 255, 0.5);
+    border: 1px solid rgb(0, 201, 255);
 }
 
 #btn-nav:focus {
@@ -242,14 +244,15 @@ nav {
     cursor: pointer;
     padding: 25px 0;
     font-weight: bolder than 300;
+    transition: 0.2s ease;
 }
 
 
 .buttom-icones button:hover {
-    transition: 0.1s ease;
     box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
     transform: scale(1.1);
     color: rgb(0, 201, 255);
+    
     
 }
 
@@ -326,7 +329,7 @@ nav {
     font-family: 'ubuntu';
     font-weight: bolder;
     font-size: 2rem;
-    color: rgb(0, 170, 212);
+    color: rgb(0, 201, 255);;
     margin-bottom: 40px;
 }
 
@@ -427,7 +430,7 @@ nav {
     font-weight: 650;
     font-size: 3rem;
     margin: 0;
-    color: rgb(0, 170, 212);
+    color: rgb(0, 201, 255);;
     text-align: center;
 } 
 
@@ -469,7 +472,7 @@ nav {
     font-family: 'ubuntu';
     font-weight: bolder;
     font-size: 1.7rem;
-    color: rgb(0, 170, 212);
+    color: rgb(0, 201, 255);
     border-radius: 50%;
 }
 
