Alterações do Footer e Depoimentos

--- a/style/style.css
+++ b/style/style.css
@@ -48,6 +48,11 @@ body {
     
 }
 
+.main-depoimento {
+    grid-area: section; background-color: #eeeeee;
+    
+}
+
 .main-footer {
     grid-area: footer; background-color: palegreen;
     
@@ -61,422 +66,6 @@ body {
     body{
         grid-template-areas: "header" "nav" "main" "section"  "footer";
     }
-    .main-content {flex-direction: column;}
-}
-
-
-
-
-
-
-/* HEADER */
-header {
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-}
-
-.header-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    height: 85vh;
-}
-
-.imgHeader img {
-    margin-left: 50px;
-    height: 78vh;
-    width: 47vw;
-}
-
-nav {
-    margin-top: 20px;
-    height: 80px;
-    z-index: 1;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row; 
-    background-color: white;
-    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
-}
-
-#logo {
-    height: 65px;
-    width: 170px;
-    transition: .8s;
-}
-
-.nav-items {
-    margin-left: 230px;
-    font-family: 'ubuntu';
-}
-
-.nav-items a {
-    color: black;
-    transform: scale(1.2);
-    font-family: 'ubuntu';
-    font-weight: Bolder than 300;
-    font-size: 1.4rem;
-    text-decoration: none;
-    padding: 0px 18px;
-    box-sizing: border-box;
-    
-}
-
-.nav-items a:hover{
-    transform: scale(1.2);
-    color: rgb(0, 201, 255);
-}
-
-#btn-nav {
-    max-width: 300px;
-    min-width: 140px;
-    min-height: 30px;
-    max-height: 45px;
-    padding: 12px;
-    margin: 10px;
-    border: none;
-    border-radius: 100px;
-    background-color: transparent;
-    color: black;
-    font-family: 'ubuntu';
-    font-weight: 500;
-    font-size: 1.2rem;
-    text-align: center;
-    cursor: pointer;
-    transition: 0.5s;
-    box-sizing: border-box;
-    
-    
-}
-
-#btn-nav:hover {
-    box-sizing: border-box;
-    transform: scale(1.05);
-    transition: 0.5s;
-    box-shadow: 0 0 25px rgba(0, 201, 255, 0.5);
-    border: 1px solid rgb(0, 201, 255);
-}
-
-#btn-nav:focus {
-    outline: none;
-}
-
-
-
-/* BOTAO ENVIAR */
-.icones-header {
-    width: 100%;
-    margin-top: 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-}
-
-.icones-header i {
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    text-align: center;
-    font-size: 18px;
-    height: 48px;
-    width: 48px;
-    border-radius: 100px;
-    border: 1px solid rgb(0, 201, 255);
-    cursor: pointer;
-    transition: .2s ease;   
-}
-
-.icones-header i:hover {
-    transition: .2s ease;
-    background-color:rgb(0, 201, 255);
-    color: white;
-}
-
-
-
-/* ASIDE */
-.chamadaTexto {
-    
-    color: rgb(0, 170, 212); /*Azul médio*/
-    margin: 0;
-    width: 400px;
-    height: 290px;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.chamadaTexto h1 {
-    font-family: 'ubuntu';
-    font-weight: 650;
-    font-size: 4.5rem;
-    margin: 0;
-    
-}
-
-.chamadaTexto p {
-    margin-top: 20px;
-    width: 580px;
-    word-wrap:normal;
-    font-family: 'ubuntu';
-    font-weight: 300;
-    font-size: 1.7rem;
-    color: rgb(208, 206, 206);
-    
-}
-
-.buttom-icones button {
-    max-width: 250px;
-    min-width: 100%;
-    max-height: 75px;
-    min-height: 45px;
-    border: none;
-    border-radius: 100px;
-    border: 1px solid rgb(0, 201, 255);
-    color: rgb(208, 206, 206);
-    font-family: 'ubuntu';
-    font-size: 1.4rem;
-    background-color: white;
-    cursor: pointer;
-    padding: 25px 0;
-    font-weight: bolder than 300;
-    transition: 0.2s ease;
-}
-
-
-.buttom-icones button:hover {
-    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
-    transform: scale(1.1);
-    color: rgb(0, 201, 255);
-    
-    
-}
-
-.buttom-icones button:focus {
-    outline: none;
-}
-
-.buttom-icones{
-    width: 80%;
-} 
-
-
-
-
-/* 2 BOXES BRANCOS COM BOTAO */
-.main-content {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: space-around;
-    flex-direction: column;
-}
-
-#box-pq-jovem{
-    position: relative;
-    display: flex;
-    margin: 0;
-    width: 100%;
-    height: 50%;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    background: url('../img/azul-circ.png');
-    background-repeat: cover;
-    overflow: hidden;
-}
-
-.box-incentivo{
-    bottom: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 70%;
-    width: 27%;
-    background-color: white;
-    box-shadow: 1px 3px 5px rgba(0,0,0,0.4);
-    border-radius: 10px; 
-}
-
-.box1{
-    position: absolute;
-    left: 18%;
-}
-
-.box2{
-    position: absolute;
-    right: 18%;
-}
-
-.box-incentivo p{
-    width: 50%;
-    text-align: center;
-    word-wrap:normal;
-    font-family: 'ubuntu';
-    font-weight: 300;
-    font-size: 2rem;
-    color: rgb(208, 206, 206);
-    margin-bottom: 40px;
-}
-
-.box-incentivo span{
-    word-wrap:normal;
-    font-family: 'ubuntu';
-    font-weight: bolder;
-    font-size: 2rem;
-    color: rgb(0, 201, 255);;
-    margin-bottom: 40px;
-}
-
-.buttom-incentivo {
-    max-width: 250px;
-    min-width: 70%;
-    max-height: 75px;
-    min-height: 45px;
-    border: none;
-    border-radius: 100px;
-    border: 1px solid rgb(0, 201, 255);
-    color: rgb(208, 206, 206);
-    font-family: 'ubuntu';
-    font-size: 1.4rem;
-    background-color: white;
-    cursor: pointer;
-    padding: 25px 0;
-    font-weight: bolder than 300;
-    
-}
-
-.buttom-incentivo:hover {
-    transition: 0.1s ease;
-    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
-    transform: scale(1.1);
-    color: rgb(0, 201, 255);
-    
-}
-
-.buttom-incentivo:focus {
-    outline: none;
-}
-
-.box-pq-jovem{
-    background: url('../img/fundo.png');
-    background-repeat: cover;
-    display: flex;
-    height: 50%;
-    justify-content: space-evenly;
-    align-items: center;
-    
-}
-
-.box-pq-jovem h2{
-    font-family: 'ubuntu';
-    font-weight: 700;
-    font-size: 4.5rem;
-    margin: 0;
-    color: white;
-}
-
-
-.text-pq p{
-    margin-top: 20px;
-    width: 680px;
-    word-wrap:normal;
-    font-family: 'ubuntu';
-    font-weight: 300;
-    font-size: 1.7rem;
-    color:white;
-    text-align: justify;
-}
-
-.imgTextPq{
-    height: 50%;
-    width: 20%;
-    display: flex;
-    justify-content: center;
-}
-
-.imgTextPq img{
-    height: 90%;
-}
-
-
-
-
-/* SECTION: COMO FUNCIONA? */
-.main-section{
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: space-evenly;
-}
-
-.como-func{
-    width: 70%;
-    margin: 30px auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: space-evenly;
-}
-
-.como-func h2{
-    font-family: 'ubuntu';
-    font-weight: 650;
-    font-size: 3rem;
-    margin: 0;
-    color: rgb(0, 201, 255);;
-    text-align: center;
-} 
-
-.como-func p{
-    word-wrap:normal;
-    font-family: 'ubuntu';
-    font-weight: 300;
-    font-size: 1.7rem;
-    color:rgb(208, 206, 206);
-    text-align: center;
-}
-
-
-.func-icones{
-    margin: 40px auto;
-    width: 80%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center; 
-}
-
-.func-div{
-    width: 28%;
-    text-align: center;
-}
-
-.func-div p{
-    word-wrap:normal;
-    font-family: 'ubuntu';
-    font-weight: 300;
-    font-size: 1.1rem;
-    color:rgb(175, 171, 171);
-    text-align: center;
-}
-
-.func-div h3{
-    word-wrap:normal;
-    font-family: 'ubuntu';
-    font-weight: bolder;
-    font-size: 1.7rem;
-    color: rgb(0, 201, 255);
-    border-radius: 50%;
-}
-
-.func-div img{
-    width: 25%;
+    .main-content {flex-direction: column;
+    }
 }
