--- a/style/depoimento.css
+++ b/style/depoimento.css
@@ -2,6 +2,10 @@
     padding: 100px;
 }
 
+#text-depoimento{
+    background-color: rgb(134, 127, 127);
+}
+
 .bloco-depoimento{
     width: 100%;
     height: 80%;
@@ -14,18 +18,21 @@
 h2{
     font-family: 'ubuntu';
     font-weight: 550;
-    font-size: 4.5rem;
+    font-size: 4rem;
     margin: 0;
     color:rgb(0, 201, 255);
+    margin-left: 25px;
 }
 
 h3{
     word-wrap:normal;
     font-family: 'ubuntu';
     font-weight: 500;
-    font-size: 1.7rem;
+    font-size: 1.8rem;
     color: black;
     border-radius: 50%;
+    width: 80%;
+    margin: 0;
 }
 
 p{
@@ -33,9 +40,8 @@ p{
     word-wrap:normal;
     font-family: 'ubuntu';
     font-weight: 300;
-    font-size: 1.1rem;
+    font-size: 1.375rem;
     color:rgb(175, 171, 171);
-    text-align: justify;
 }
 
 .depoimento{
@@ -49,6 +55,13 @@ p{
     background-color: white;
     box-shadow: 1px 3px 5px rgba(0,0,0,0.4);
     border-radius: 10px; 
+    margin: 0;
+    transition: .3s;
+}
+
+.depoimento:hover{
+    transform: scale(1.1);
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
 }
 
 .perfil-depoimento{
@@ -56,20 +69,41 @@ p{
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-between;
+    width: 80%;
+    margin-top: 20px;
 }
 
 .perfil-depoimento img{
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
-    margin: 20px;
+    margin-right: 20px;
 }
 
 .perfil-depoimento p{
         width: 100%;
+        font-size: 1.2rem;
+        margin: 10px 0;
+}
+
+.perfil-depoimento h4{
+    word-wrap:normal;
+    font-family: 'ubuntu';
+    font-weight: 500;
+    font-size: 1.3rem;
+    color: black;
+    margin: 10px 0;
 }
 
 .perfil-depoimento span{
     color: rgb(0, 201, 255);
     font-weight: bold;
+}
+
+.img-depoi{
+    width: 30%;
+}
+
+.perfil{
+    width: 70%;
 }
