--- a/style/header.css
+++ b/style/header.css
@@ -32,7 +32,7 @@ nav {
 }
 
 #logo {
-    height: 65px;
+    height: 35px;
     width: 170px;
     transition: .8s;
 }
@@ -123,4 +123,56 @@ nav {
     transition: .2s ease;
     background-color:rgb(0, 201, 255);
     color: white;
+}
+
+
+
+
+
+/* PARTICIPE */
+
+
+.part-header-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    height: 85vh;
+    width: 100%;
+}
+
+.part-imgHeader img {
+    margin-left: 50px;
+    height: 78vh;
+    width: 47vw;
+}
+
+.part-chamadaTexto {
+    
+    color: rgb(0, 170, 212); /*Azul médio*/
+    margin: 0;
+    width: 700px;
+    height: 290px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.part-chamadaTexto h1 {
+    font-family: 'ubuntu';
+    font-weight: 650;
+    font-size: 4.5rem;
+    margin: 0;
+    
+}
+
+.part-chamadaTexto p {
+    margin-top: 20px;
+    width: 580px;
+    word-wrap:normal;
+    font-family: 'ubuntu';
+    font-weight: 300;
+    font-size: 1.7rem;
+    color: rgb(208, 206, 206);
 }
