--- a/style/aside.css
+++ b/style/aside.css
@@ -7,20 +7,27 @@
     flex-direction: column;
 }
 
-#box-pq-jovem{
+.box-pq-jovem{
     position: relative;
     display: flex;
     margin: 0;
     width: 100%;
-    height: 50%;
-    flex-direction: row;
+height: 80%;
     justify-content: space-around;
     align-items: center;
-    background: url('../img/home/fundo.png');
-    background-repeat: cover;
     overflow: hidden;
-}
+    animation: cor 5s;
+    animation-iteration-count: infinite;
 
+
+}
+@keyframes cor {
+    0%{background-color: lightblue}
+    30%{background-color: lightgreen}
+    700%{background-color: lightskyblue}
+
+100%{background-color: lightblue}
+}
 .box-incentivo{
     bottom: 80px;
     display: flex;
@@ -35,12 +42,10 @@
 }
 
 .box1{
-    position: absolute;
     left: 18%;
 }
 
 .box2{
-    position: absolute;
     right: 18%;
 }
 
@@ -94,15 +99,6 @@
     outline: none;
 }
 
-.box-pq-jovem{
-    background: url('../img/home/fundo.png');
-    background-repeat: cover;
-    display: flex;
-    height: 50%;
-    justify-content: space-evenly;
-    align-items: center;
-    
-}
 
 .box-pq-jovem h2{
     font-family: 'ubuntu';
