--- a/style/aside.css
+++ b/style/aside.css
@@ -1,55 +1,58 @@
 /* 2 BOXES BRANCOS COM BOTAO */
 .main-content {
     width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: space-around;
     flex-direction: column;
+    animation: cor 10s;
+    animation-iteration-count: infinite;
+    
 }
 
 .box-pq-jovem{
-    position: relative;
     display: flex;
     margin: 0;
     width: 100%;
-height: 80%;
+    height: 55%;
     justify-content: space-around;
     align-items: center;
+    flex-direction: row;
     overflow: hidden;
-    animation: cor 5s;
-    animation-iteration-count: infinite;
-
-
+    
 }
-@keyframes cor {
-    0%{background-color: lightblue}
-    30%{background-color: lightgreen}
-    700%{background-color: lightskyblue}
 
-100%{background-color: lightblue}
+.box-text-pq{
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center
+}
+
+@keyframes cor {
+    0%{background-color: rgb(0, 201, 255)}
+    30%{background-color: rgb(204,251,0)}
+    60%{background-color: rgb(0,170,212)}
+    100%{background-color: rgb(0, 201, 255)}
 }
 .box-incentivo{
-    bottom: 80px;
+    
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 70%;
-    width: 27%;
+    height: 250px;
+    width: 400px;
     background-color: white;
     box-shadow: 1px 3px 5px rgba(0,0,0,0.4);
     border-radius: 10px; 
 }
 
-.box1{
-    left: 18%;
-}
-
-.box2{
-    right: 18%;
-}
 
 .box-incentivo p{
+    margin: 10px;
     width: 50%;
     text-align: center;
     word-wrap:normal;
@@ -57,23 +60,20 @@ height: 80%;
     font-weight: 300;
     font-size: 2rem;
     color: rgb(208, 206, 206);
-    margin-bottom: 40px;
 }
 
 .box-incentivo span{
     word-wrap:normal;
-    font-family: 'ubuntu';
+    font-family: 'ubuntu';  
     font-weight: bolder;
     font-size: 2rem;
     color: rgb(0, 201, 255);;
-    margin-bottom: 40px;
 }
 
 .buttom-incentivo {
-    max-width: 250px;
-    min-width: 70%;
-    max-height: 75px;
-    min-height: 45px;
+    width: 200px;
+    height: 60px;
+    padding: 10px;
     border: none;
     border-radius: 100px;
     border: 1px solid rgb(0, 201, 255);
@@ -82,7 +82,6 @@ height: 80%;
     font-size: 1.4rem;
     background-color: white;
     cursor: pointer;
-    padding: 25px 0;
     font-weight: bolder than 300;
     
 }
@@ -100,7 +99,7 @@ height: 80%;
 }
 
 
-.box-pq-jovem h2{
+.text-pq h2{
     font-family: 'ubuntu';
     font-weight: 700;
     font-size: 4.5rem;
